--- a/pages/17385.html
+++ b/pages/17385.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -545,11 +544,11 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a><ul><li><a href='#scope'>Scope</a></li></ul></li><li><a href='#overview'>Overview</a></li><li><a href='#references_and_online_materials'>References and online materials</a><ul><li><a href='#related_lab_pages'>Related <math class='maruku-mathml' display='inline' id='mathml_d981df420b57ac4b4d4caf0f69f2f810edf51e30_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab pages</a></li><li><a href='#software'>Software</a></li><li><a href='#organizations_and_initiatives_in_math_education'>Organizations and initiatives in math education</a></li><li><a href='#individual_educators_and_their_work'>Individual educators and their work</a></li><li><a href='#opinion_articles'>Opinion articles</a></li><li><a href='#other_references'>Other references</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a><ul><li><a href='#scope'>Scope</a></li></ul></li><li><a href='#overview'>Overview</a></li><li><a href='#references_and_online_materials'>References and online materials</a><ul><li><a href='#related_lab_pages'>Related <math class='maruku-mathml' display='inline' id='mathml_d3a87e10b006ef65d5eb04dee33e4ee348a3fe89_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab pages</a></li><li><a href='#software'>Software</a></li><li><a href='#organizations_and_initiatives_in_math_education'>Organizations and initiatives in math education</a></li><li><a href='#individual_educators_and_their_work'>Individual educators and their work</a></li><li><a href='#opinion_articles'>Opinion articles</a></li><li><a href='#other_references'>Other references</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <blockquote>
-<p><math class='maruku-mathml' display='inline' id='mathml_d981df420b57ac4b4d4caf0f69f2f810edf51e30_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>μ</mi><mi>α</mi><mi>θ</mi><mi>η</mi><mi>σ</mi><mi>ι</mi><mi>ς</mi></mrow><annotation encoding='application/x-tex'>\mu\alpha\theta\eta\sigma\iota\varsigma</annotation></semantics></math> - Learning (Gr.)</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_d3a87e10b006ef65d5eb04dee33e4ee348a3fe89_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>μ</mi><mi>α</mi><mi>θ</mi><mi>η</mi><mi>σ</mi><mi>ι</mi><mi>ς</mi></mrow><annotation encoding='application/x-tex'>\mu\alpha\theta\eta\sigma\iota\varsigma</annotation></semantics></math> - Learning (Gr.)</p>
 </blockquote>
 
 <p>This page will discuss approaches to <strong>teaching of mathematics</strong> (as it is usual in the subject, with emphasis on the pre-university level, where the care in didactical aspects is the most relevant) and the outstanding sources of the relevant materials about teaching.</p>
@@ -576,7 +575,7 @@ margin-left: 0em;
 <li><a href='http://GreenApples.wikispaces.com'>GreenApples</a> – resources for new math teachers</li>
 </ul>
 
-<h3 id='related_lab_pages'>Related <math class='maruku-mathml' display='inline' id='mathml_d981df420b57ac4b4d4caf0f69f2f810edf51e30_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab pages</h3>
+<h3 id='related_lab_pages'>Related <math class='maruku-mathml' display='inline' id='mathml_d3a87e10b006ef65d5eb04dee33e4ee348a3fe89_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab pages</h3>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/New+Math'>New Math</a></li>
@@ -599,7 +598,7 @@ margin-left: 0em;
 
 <li><a href='http://www.corestandards.org/Math'>Common Core</a> math standards</li>
 
-<li>Next Generation Science Standards <a href='http://www.nextgenscience.org'>http://www.nextgenscience.org</a></li>
+<li>Next Generation Science Standards &lt;http://www.nextgenscience.org&gt;</li>
 
 <li><a href='http://www.mathunion.org/icmi'>ICMI</a> International Commision on Mathematical Instruction (founded in 1908, now under IMU)</li>
 
@@ -645,7 +644,7 @@ margin-left: 0em;
 
 <li>Mariya Boyko, <em>The “New Math” Movement in the U.S. vs Kolmogorov’s Math Curriculum Reform in the U.S.S.R.</em>, <a href='https://mariyaboyko12.wordpress.com/2013/08/03/the-new-math-movement-in-the-u-s-vs-kolmogorovs-math-curriculum-reform-in-the-u-s-s-r'>html</a></li>
 
-<li>R. Balian, A. Connes, Bismut, Lafforgue, Serre, <a href='https://www.laurentlafforgue.org/textes/SavoirsFondamentaux.pdf'>pdf</a> about state of scientific part of education in France</li>
+<li>R. Balian, A. Connes, Bismut, Lafforgue, Serre, <em>Les savoirs fondamentaux au service de l’avenir scientifique et technique</em>, <a href='https://www.laurentlafforgue.org/textes/SavoirsFondamentaux.pdf'>pdf</a>, a text lamenting the current state of the scientific part of education in France</li>
 </ul>
 
 <h3 id='other_references'>Other references</h3>
@@ -671,19 +670,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June  2, 2017 17:05:40 
-  by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Skoda</a>
-  (178.160.49.98)
+  <p>
+  Last revised on July  3, 2018 at 15:23:11.
+  See the <a href="https://ncatlab.org/nlab/history/mathematics education" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/mathematics+education" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mathematics+education/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/mathematics+education" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mathematics+education" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/mathematics+education" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mathematics+education/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/mathematics+education" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mathematics+education" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/mathematics education/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/mathematics+education" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/mathematics+education" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/mathematics+education" id="view_source" rel="nofollow">Source</a>
