--- a/pages/1788.html
+++ b/pages/1788.html
@@ -305,13 +305,14 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d770c609253740c27c56e3fd540418546bae5c22_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><msup><mi>ℝ</mi> <mrow><mn>0</mn><mo stretchy='false'>|</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>
+    <p><a class='existingWikiWord' href='/nlab/files/GroupActing.jpg' title=''></a> <img src='https://ncatlab.org/nlab/files/GroupActing.jpg' width='100'/></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2be75e0832f5042e2eda5de3ca3546350963263b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><msup><mi>ℝ</mi> <mrow><mn>0</mn><mo stretchy='false'>|</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>
   \bigcirc\!\!\!\!\!\!\!\!\mathbb{R}^{0\vert 1}
 
-</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d770c609253740c27c56e3fd540418546bae5c22_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mi>𝔸</mi></mrow><annotation encoding='application/x-tex'>
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2be75e0832f5042e2eda5de3ca3546350963263b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mi>𝔸</mi></mrow><annotation encoding='application/x-tex'>
   \bigcirc\!\!\!\!\!\!\!\!\mathbb{A}
 
-</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d770c609253740c27c56e3fd540418546bae5c22_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>{</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><msub><mi>𝔻</mi> <mi>V</mi></msub><mo>×</mo><msup><mi>ℝ</mi> <mrow><mn>0</mn><mo stretchy='false'>|</mo><mi>q</mi><mo>+</mo><mn>1</mn></mrow></msup><mo>⟶</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><msub><mi>𝔻</mi> <mi>V</mi></msub><mo>×</mo><msup><mi>ℝ</mi> <mrow><mn>0</mn><mo stretchy='false'>|</mo><mi>q</mi></mrow></msup><mo>}</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2be75e0832f5042e2eda5de3ca3546350963263b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>{</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><msub><mi>𝔻</mi> <mi>V</mi></msub><mo>×</mo><msup><mi>ℝ</mi> <mrow><mn>0</mn><mo stretchy='false'>|</mo><mi>q</mi><mo>+</mo><mn>1</mn></mrow></msup><mo>⟶</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><msub><mi>𝔻</mi> <mi>V</mi></msub><mo>×</mo><msup><mi>ℝ</mi> <mrow><mn>0</mn><mo stretchy='false'>|</mo><mi>q</mi></mrow></msup><mo>}</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \left\{
     \mathbb{R}^{n} \times \mathbb{D}_V \times \mathbb{R}^{0\vert q + 1}
     \longrightarrow
@@ -324,14 +325,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on June 29, 2018 at 20:39:25.
+  Last revised on July  3, 2018 at 15:24:54.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1544" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1544 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1545" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1545 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
