--- a/pages/2696.html
+++ b/pages/2696.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/270/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -697,7 +696,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/universal+colimit'>universal colimits</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/pullback-stable+colimit'>universal colimits</a></p>
 </li>
 
 <li>
@@ -1067,7 +1066,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#classical_case'>Classical case</a></li><li><a href='#equivariant_version'>Equivariant version</a></li><li><a href='#in_general_toposes'>In general <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-toposes</a></li><li><a href='#in_homotopy_type_theory'>In homotopy type theory</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#classical_case'>Classical case</a></li><li><a href='#equivariant_version'>Equivariant version</a></li><li><a href='#in_general_toposes'>In general <math class='maruku-mathml' display='inline' id='mathml_bac75549a63f70abfbfe4f61f80a603d9dc9deb3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-toposes</a></li><li><a href='#in_homotopy_type_theory'>In homotopy type theory</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='classical_case'>Classical case</h2>
 
 <p>The classical <strong>Whitehead theorem</strong> asserts that</p>
@@ -1085,14 +1084,14 @@ margin-left: 0em;
 <div class='num_cor'>
 <h6 id='corollary'>Corollary</h6>
 
-<p>In the <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> <a class='existingWikiWord' href='/nlab/show/Infinity-Grpd'>∞ Grpd</a> every <a class='existingWikiWord' href='/nlab/show/weak+homotopy+equivalence'>weak homotopy equivalence</a> is a <a class='existingWikiWord' href='/nlab/show/homotopy+equivalence'>homotopy equivalence</a>.</p>
+<p>In the <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> <a class='existingWikiWord' href='/nlab/show/Infinity-Grpd'>∞Grpd</a> every <a class='existingWikiWord' href='/nlab/show/weak+homotopy+equivalence'>weak homotopy equivalence</a> is a <a class='existingWikiWord' href='/nlab/show/homotopy+equivalence'>homotopy equivalence</a>.</p>
 </div>
 
 <h2 id='equivariant_version'>Equivariant version</h2>
 
-<p>In <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/equivariant+homotopy+theory'>equivariant homotopy theory</a> the statement is that <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>-homotopy equivalences between <a class='existingWikiWord' href='/nlab/show/G-CW+complex'>G-CW complexes</a> are equivalent to maps that are weak homotopy equivalences on <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> spaces for all closed subgroups (e.g. <a href='#GreenleesMay95'>Greenlees-May 95, theorem 2.4</a>). See at <em><a class='existingWikiWord' href='/nlab/show/equivariant+Whitehead+theorem'>equivariant Whitehead theorem</a></em>.</p>
+<p>In <math class='maruku-mathml' display='inline' id='mathml_bac75549a63f70abfbfe4f61f80a603d9dc9deb3_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/equivariant+homotopy+theory'>equivariant homotopy theory</a> the statement is that <math class='maruku-mathml' display='inline' id='mathml_bac75549a63f70abfbfe4f61f80a603d9dc9deb3_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>-homotopy equivalences between <a class='existingWikiWord' href='/nlab/show/G-CW+complex'>G-CW complexes</a> are equivalent to maps that are weak homotopy equivalences on <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> spaces for all closed subgroups (e.g. <a href='#GreenleesMay95'>Greenlees-May 95, theorem 2.4</a>). See at <em><a class='existingWikiWord' href='/nlab/show/equivariant+Whitehead+theorem'>equivariant Whitehead theorem</a></em>.</p>
 
-<h2 id='in_general_toposes'>In general <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-toposes</h2>
+<h2 id='in_general_toposes'>In general <math class='maruku-mathml' display='inline' id='mathml_bac75549a63f70abfbfe4f61f80a603d9dc9deb3_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-toposes</h2>
 
 <p>There is a notion of <a class='existingWikiWord' href='/nlab/show/homotopy+group'>homotopy groups</a> for objects in every <a class='existingWikiWord' href='/nlab/show/infinity-stack'>∞-stack</a> <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a>, as described at <a class='existingWikiWord' href='/nlab/show/homotopy+groups+in+an+%28infinity%2C1%29-topos'>homotopy group (of an ∞-stack)</a>. Accordingly, there is a notion of <a class='existingWikiWord' href='/nlab/show/weak+homotopy+equivalence'>weak homotopy equivalence</a> in every <a class='existingWikiWord' href='/nlab/show/infinity-stack'>∞-stack</a> <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a> and hence an analog of the statement of Whiteheads theorem. One finds that</p>
 
@@ -1100,13 +1099,13 @@ margin-left: 0em;
 
 <p>The <a class='existingWikiWord' href='/nlab/show/infinity-stack'>∞-stack</a> <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a>es in which the Whitehead theorem does hold are the <a class='existingWikiWord' href='/nlab/show/hypercomplete+%28infinity%2C1%29-topos'>hypercomplete (∞,1)-topos</a>es. These are precisely the ones that are <a class='existingWikiWord' href='/nlab/show/locally+presentable+%28infinity%2C1%29-category'>presented</a> by a local <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+presheaves'>model structure on simplicial presheaves</a>.</p>
 
-<p>For instance the hypercomplete <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-topos <a class='existingWikiWord' href='/nlab/show/Top'>Top</a> is presented by the model structure on simplicial presheaves on the point, namely the <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+sets'>model structure on simplicial sets</a>.</p>
+<p>For instance the hypercomplete <math class='maruku-mathml' display='inline' id='mathml_bac75549a63f70abfbfe4f61f80a603d9dc9deb3_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-topos <a class='existingWikiWord' href='/nlab/show/Top'>Top</a> is presented by the model structure on simplicial presheaves on the point, namely the <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+sets'>model structure on simplicial sets</a>.</p>
 
 <h2 id='in_homotopy_type_theory'>In homotopy type theory</h2>
 
 <p>Since <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a> admits models in <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-toposes</a> (and in particular in non-hypercomplete ones), Whitehead’s theorem is not provable when regarded as a statement about types in homotopy type theory. From this perspective, the truth of Whitehead’s theorem is a <a class='existingWikiWord' href='/nlab/show/foundational+axiom'>foundational axiom</a> that may be regarded as a “classicality” property, akin to <a class='existingWikiWord' href='/nlab/show/excluded+middle'>excluded middle</a> or the <a class='existingWikiWord' href='/nlab/show/axiom+of+choice'>axiom of choice</a> — we call it <strong>Whitehead’s principle</strong> (not to be confused with <span class='newWikiWord'>Whitehead&#39;s problem<a href='/nlab/new/Whitehead%27s+problem'>?</a></span>, another statement that is independent of the usual axioms of set theory).</p>
 
-<p>Whitehead’s principle does hold, however, for maps between <a class='existingWikiWord' href='/nlab/show/homotopy+n-type'>homotopy n-types</a> for any finite <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>; this is provable in homotopy type theory by <a class='existingWikiWord' href='/nlab/show/induction'>induction</a> on <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>.</p>
+<p>Whitehead’s principle does hold, however, for maps between <a class='existingWikiWord' href='/nlab/show/homotopy+n-type'>homotopy n-types</a> for any finite <math class='maruku-mathml' display='inline' id='mathml_bac75549a63f70abfbfe4f61f80a603d9dc9deb3_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>; this is provable in homotopy type theory by <a class='existingWikiWord' href='/nlab/show/induction'>induction</a> on <math class='maruku-mathml' display='inline' id='mathml_bac75549a63f70abfbfe4f61f80a603d9dc9deb3_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -1138,7 +1137,7 @@ margin-left: 0em;
 <li id='GreenleesMay95'><a class='existingWikiWord' href='/nlab/show/John+Greenlees'>John Greenlees</a>, <a class='existingWikiWord' href='/nlab/show/Peter+May'>Peter May</a>, <em>Equivariant stable homotopy theory</em>, in I.M. James (ed.), <em>Handbook of Algebraic Topology</em> , pp. 279-325. 1995. (<a href='http://www.math.uchicago.edu/~may/PAPERS/Newthird.pdf'>pdf</a>)</li>
 </ul>
 
-<p>The <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-topos version is in section 6.5 of</p>
+<p>The <math class='maruku-mathml' display='inline' id='mathml_bac75549a63f70abfbfe4f61f80a603d9dc9deb3_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-topos version is in section 6.5 of</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Jacob+Lurie'>Jacob Lurie</a>, <a class='existingWikiWord' href='/nlab/show/Higher+Topos+Theory'>Higher Topos Theory</a></li>
@@ -1159,19 +1158,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 26, 2017 03:25:25 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  <p>
+  Last revised on July  4, 2018 at 03:07:57.
+  See the <a href="https://ncatlab.org/nlab/history/Whitehead theorem" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Whitehead+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Whitehead+theorem/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/Whitehead+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Whitehead+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Whitehead+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Whitehead+theorem/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/Whitehead+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Whitehead+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Whitehead theorem/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Whitehead+theorem" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Whitehead+theorem" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Whitehead+theorem" id="view_source" rel="nofollow">Source</a>
