--- a/pages/1788.html
+++ b/pages/1788.html
@@ -305,34 +305,68 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><a class='existingWikiWord' href='/nlab/files/GroupActing.jpg' title=''></a> <img src='https://ncatlab.org/nlab/files/GroupActing.jpg' width='100'/></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2be75e0832f5042e2eda5de3ca3546350963263b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><msup><mi>ℝ</mi> <mrow><mn>0</mn><mo stretchy='false'>|</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>
-  \bigcirc\!\!\!\!\!\!\!\!\mathbb{R}^{0\vert 1}
+    <div class='num_prop'>
+<h6 id='proposition'>Proposition</h6>
 
-</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2be75e0832f5042e2eda5de3ca3546350963263b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>◯</mo><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mi>𝔸</mi></mrow><annotation encoding='application/x-tex'>
-  \bigcirc\!\!\!\!\!\!\!\!\mathbb{A}
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_0c6223e7ebeb250b2abd68a28e2812d81b7c7a90_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> be an <a class='existingWikiWord' href='/nlab/show/infinity-cohesive+site'>∞-cohesive site</a>, and write <math class='maruku-mathml' display='inline' id='mathml_0c6223e7ebeb250b2abd68a28e2812d81b7c7a90_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><msup><mi>𝒞</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><msub><mo stretchy='false'>]</mo> <mrow><mi>proj</mi><mo>,</mo><mi>loc</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>[\mathcal{C}^{op}, sSet_{Qu}]_{proj, loc}</annotation></semantics></math> for its local projective <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+presheaves'>model category of simplicial presheaves</a>.</p>
 
-</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2be75e0832f5042e2eda5de3ca3546350963263b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>{</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><msub><mi>𝔻</mi> <mi>V</mi></msub><mo>×</mo><msup><mi>ℝ</mi> <mrow><mn>0</mn><mo stretchy='false'>|</mo><mi>q</mi><mo>+</mo><mn>1</mn></mrow></msup><mo>⟶</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>×</mo><msub><mi>𝔻</mi> <mi>V</mi></msub><mo>×</mo><msup><mi>ℝ</mi> <mrow><mn>0</mn><mo stretchy='false'>|</mo><mi>q</mi></mrow></msup><mo>}</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  \left\{
-    \mathbb{R}^{n} \times \mathbb{D}_V \times \mathbb{R}^{0\vert q + 1}
-    \longrightarrow
-    \mathbb{R}^{n} \times \mathbb{D}_V \times \mathbb{R}^{0\vert q}
-  \right\}
-  \,.
+<p>Assume that <math class='maruku-mathml' display='inline' id='mathml_0c6223e7ebeb250b2abd68a28e2812d81b7c7a90_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> contains an <a class='existingWikiWord' href='/nlab/show/object'>object</a> <math class='maruku-mathml' display='inline' id='mathml_0c6223e7ebeb250b2abd68a28e2812d81b7c7a90_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝔸</mi><mo>∈</mo><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathbb{A} \in \mathcal{C}</annotation></semantics></math>, such that every other object is a <a class='existingWikiWord' href='/nlab/show/finite+product'>finite product</a> <math class='maruku-mathml' display='inline' id='mathml_0c6223e7ebeb250b2abd68a28e2812d81b7c7a90_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>𝔸</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{A}^n</annotation></semantics></math>, for some <math class='maruku-mathml' display='inline' id='mathml_0c6223e7ebeb250b2abd68a28e2812d81b7c7a90_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math>. (In other words, assume that <math class='maruku-mathml' display='inline' id='mathml_0c6223e7ebeb250b2abd68a28e2812d81b7c7a90_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> is also the <a class='existingWikiWord' href='/nlab/show/syntactic+category'>syntactic category</a> of <a class='existingWikiWord' href='/nlab/show/Lawvere+theory'>Lawvere theory</a>.)</p>
+
+<p>Consider the <a class='existingWikiWord' href='/nlab/show/reflective+localization'>reflective</a> <math class='maruku-mathml' display='inline' id='mathml_0c6223e7ebeb250b2abd68a28e2812d81b7c7a90_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>𝔸</mi> <mn>1</mn></msup></mrow><annotation encoding='application/x-tex'>\mathbb{A}^1</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/localization+of+an+%28infinity%2C1%29-category'>localization</a> (in the sense of <a class='existingWikiWord' href='/nlab/show/localization+at+an+object'>localization at an object</a>) of the <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+of+%28infinity%2C1%29-sheaves'>(∞,1)-sheaf (∞,1)-topos</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0c6223e7ebeb250b2abd68a28e2812d81b7c7a90_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Sh</mi> <mn>∞</mn></msub><mo stretchy='false'>(</mo><mi>𝒞</mi><msub><mo stretchy='false'>)</mo> <mi>𝔸</mi></msub><munderover><mo>⊥</mo><munder><mo>↪</mo><mrow><mphantom><mi>AA</mi></mphantom><mi>ι</mi><mphantom><mi>AA</mi></mphantom></mrow></munder><mover><mo>⟵</mo><mi>L</mi></mover></munderover><msub><mi>Sh</mi> <mn>∞</mn></msub><mo stretchy='false'>(</mo><mi>𝒞</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  Sh_\infty(\mathcal{C})_{\mathbb{A}}
+    \underoverset
+      {\underset{\phantom{AA}\iota\phantom{AA}}{\hookrightarrow}}
+      {\overset{L}{\longleftarrow}}
+      {\bot}
+  Sh_\infty(\mathcal{C})
 
 </annotation></semantics></math></div>
+<p>hence the <a class='existingWikiWord' href='/nlab/show/Bousfield+localization+of+model+categories'>left Bousfield localization</a> of <a class='existingWikiWord' href='/nlab/show/model+category'>model categories</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0c6223e7ebeb250b2abd68a28e2812d81b7c7a90_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><msup><mi>𝒞</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><msub><mo stretchy='false'>]</mo> <mrow><mi>proj</mi><mo>,</mo><mi>loc</mi><mo>,</mo><mi>𝔸</mi></mrow></msub><munderover><mrow><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub></mrow><munder><mo>⟶</mo><mrow><mphantom><mi>AA</mi></mphantom><mi>id</mi><mphantom><mi>AA</mi></mphantom></mrow></munder><mover><mo>⟵</mo><mi>id</mi></mover></munderover><mo stretchy='false'>[</mo><msup><mi>𝒞</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><msub><mo stretchy='false'>]</mo> <mrow><mi>proj</mi><mo>,</mo><mi>loc</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>
+  [\mathcal{C}^{op}, sSet_{Qu}]_{proj,loc,\mathbb{A}}
+    \underoverset
+      {\underset{\phantom{AA}id\phantom{AA}}{\longrightarrow}}
+      {\overset{id}{\longleftarrow}}
+      {\phantom{{}_{Qu}}\bot_{Qu}}
+  [\mathcal{C}^{op}, sSet_{Qu}]_{proj,loc}
+
+</annotation></semantics></math></div>
+<p>at the set of morphisms</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0c6223e7ebeb250b2abd68a28e2812d81b7c7a90_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><mo maxsize='1.2em' minsize='1.2em'>{</mo><msup><mi>𝔸</mi> <mi>n</mi></msup><mo>×</mo><mi>𝔸</mi><mover><mo>⟶</mo><mrow><msub><mi>p</mi> <mn>1</mn></msub></mrow></mover><msup><mi>𝔸</mi> <mi>n</mi></msup><mo maxsize='1.2em' minsize='1.2em'>}</mo></mrow><annotation encoding='application/x-tex'>
+  S
+    \;\coloneqq\;
+  \big\{
+    \mathbb{A}^n \times \mathbb{A}
+      \overset{p_1}{\longrightarrow}
+    \mathbb{A}^n
+  \big\}
+
+</annotation></semantics></math></div>
+<p>Then this is <a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>equivalent</a> to <a class='existingWikiWord' href='/nlab/show/Infinity-Grpd'>∞Grpd</a>, in that the (<a class='existingWikiWord' href='/nlab/show/constant+functor'>constant functor</a> <math class='maruku-mathml' display='inline' id='mathml_0c6223e7ebeb250b2abd68a28e2812d81b7c7a90_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/limit'>limit</a>)-<a class='existingWikiWord' href='/nlab/show/adjunction'>adjunction</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0c6223e7ebeb250b2abd68a28e2812d81b7c7a90_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><msup><mi>𝒞</mi> <mi>op</mi></msup><mo>,</mo><mi>sSet</mi><msub><mo stretchy='false'>]</mo> <mrow><mi>proj</mi><mo>,</mo><mi>loc</mi><mo>,</mo><mi>𝔸</mi></mrow></msub><munderover><mo>⊥</mo><munder><mo>⟶</mo><mrow><munder><mi>lim</mi><mo>⟵</mo></munder><mo>=</mo><msub><mi>ev</mi> <mo>*</mo></msub></mrow></munder><mover><mo>⟵</mo><mi>const</mi></mover></munderover><msub><mi>sSet</mi> <mi>Qu</mi></msub></mrow><annotation encoding='application/x-tex'>
+  [\mathcal{C}^{op}, sSet]_{proj,loc,\mathbb{A}}
+    \underoverset
+      {\underset{ \underset{\longleftarrow}{\lim} = ev_{\ast}}{\longrightarrow}}
+      {\overset{ const }{\longleftarrow}}
+      {\bot}
+  sSet_{Qu}    
+
+</annotation></semantics></math></div>
+<p>is a <a class='existingWikiWord' href='/nlab/show/Quillen+equivalence'>Quillen equivalence</a>.</p>
+</div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July  3, 2018 at 15:24:54.
+  Last revised on July  4, 2018 at 07:53:14.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1545" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1545 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1546" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1546 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
