--- a/pages/626.html
+++ b/pages/626.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -742,7 +741,7 @@ margin-left: 0em;
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Theta-space'>Theta-space</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/infinity-category'>∞-category</a>/<a class='existingWikiWord' href='/nlab/show/omega-category'>ω-category</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/infinity-category'>∞-category</a>/<a class='existingWikiWord' href='/nlab/show/infinity-category'>∞-category</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-category'>(∞,n)-category</a>
 <ul>
@@ -788,9 +787,9 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/0-category'>0-category</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/%28-1%29-category'>(−1)-category</a></li>
+<li><span class='newWikiWord'>(?1)-category<a href='/nlab/new/%28%3F1%29-category'>?</a></span></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/%28-2%29-category'>(−2)-category</a></li>
+<li><span class='newWikiWord'>(?2)-category<a href='/nlab/new/%28%3F2%29-category'>?</a></span></li>
 </ul>
 </li>
 
@@ -818,7 +817,7 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/quasi-category'>quasi-category</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/simplicial+model+for+weak+omega-categories'>simplicial model for weak ω-categories</a>
+<li><span class='newWikiWord'>simplicial model for weak ∞-categories<a href='/nlab/new/simplicial+model+for+weak+%E2%88%9E-categories'>?</a></span>
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/complicial+set'>complicial set</a></li>
 
@@ -838,11 +837,11 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/tetracategory'>tetracategory</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/strict+omega-category'>strict ω-category</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/strict+n-category'>strict ∞-category</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Batanin+omega-category'>Batanin ω-category</a></li>
+<li><span class='newWikiWord'>Batanin ∞-category<a href='/nlab/new/Batanin+%E2%88%9E-category'>?</a></span></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Trimble+n-category'>Trimble ω-category</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/Trimble+n-category'>Trimble ∞-category</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Grothendieck-Maltsiniotis+infinity-category'>Grothendieck-Maltsiniotis ∞-categories</a></li>
 </ul>
@@ -998,7 +997,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>there is also a string diagram calculus for <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategories</a>, which extends that for monoidal categories regarded as one-object bicategories. Thus, the strings now represent 1-cells and the nodes 2-cells, leaving the two-dimensional planar regions cut out by the strings to represent the 0-cells. This makes it manifest that in general, string diagram notation is <em>Poincaré dual</em> to the <a class='existingWikiWord' href='/nlab/show/globe'>globular</a> notation: where one uses <math class='maruku-mathml' display='inline' id='mathml_c16d0591676f9c3562a9080917dc10176d3eda06_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math>-dimensional symbols, the other uses <math class='maruku-mathml' display='inline' id='mathml_c16d0591676f9c3562a9080917dc10176d3eda06_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>2</mn><mo>−</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(2-d)</annotation></semantics></math>-dimensional symbols.</p>
+<p>there is also a string diagram calculus for <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategories</a>, which extends that for monoidal categories regarded as one-object bicategories. Thus, the strings now represent 1-cells and the nodes 2-cells, leaving the two-dimensional planar regions cut out by the strings to represent the 0-cells. This makes it manifest that in general, string diagram notation is <em>Poincaré dual</em> to the <a class='existingWikiWord' href='/nlab/show/globe'>globular</a> notation: where one uses <math class='maruku-mathml' display='inline' id='mathml_00434747bddfc9c58f0a4749f77c101ab9fe0350_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math>-dimensional symbols, the other uses <math class='maruku-mathml' display='inline' id='mathml_00434747bddfc9c58f0a4749f77c101ab9fe0350_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>2</mn><mo>−</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(2-d)</annotation></semantics></math>-dimensional symbols.</p>
 </li>
 
 <li>
@@ -1214,6 +1213,12 @@ margin-left: 0em;
 <li>Francois Lamarche, <em>Proof Nets for Intuitionistic Linear Logic: Essential nets</em>, 2008 <a href='http://hal.inria.fr/docs/00/34/73/36/PDF/prfnet1.pdf'>pdf</a></li>
 </ul>
 
+<p>For <a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>biclosed monoidal categories</a> in</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Bob+Coecke'>Bob Coecke</a>, Edward Grefenstette, and <span class='newWikiWord'>Mehrnoosh Sadrzadeh<a href='/nlab/new/Mehrnoosh+Sadrzadeh'>?</a></span>, <em>Lambek vs. Lambek: Functorial vector space semantics and string diagrams for Lambek calculus</em>, 2013 <a href='https://www.sciencedirect.com/science/article/pii/S0168007213000626'>link</a></li>
+</ul>
+
 <p>For <a class='existingWikiWord' href='/nlab/show/linearly+distributive+category'>linearly distributive categories</a> in</p>
 
 <ul id='BCST'>
@@ -1267,19 +1272,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  2, 2018 06:40:21 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (217.39.117.135)
+  <p>
+  Last revised on July  4, 2018 at 10:55:47.
+  See the <a href="https://ncatlab.org/nlab/history/string diagram" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/string+diagram" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+diagram/39" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(39 revisions)</span> | <a href="/nlab/show/diff/string+diagram" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+diagram" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/string+diagram" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+diagram/40" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(40 revisions)</span> | <a href="/nlab/show/diff/string+diagram" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+diagram" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/string diagram/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/string+diagram" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/string+diagram" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/string+diagram" id="view_source" rel="nofollow">Source</a>
